Componentes/sgcWebSockets Professional 2022.1 for D7-11 Alexandria Source/Source/sgcWebSocket_WinAPI.pas


function WinHttpWebSocketQueryCloseStatus(hRequest: HINTERNET; pusStatus: PWINHTTP_WEB_SOCKET_CLOSE_STATUS; pvReason: PVOID; dwReasonLength: DWORD; pdwReasonLengthConsumed: PDWORD): DWORD; stdcall;
begin
  DoInitialize();
  if not Assigned(oWinHttpWebSocketQueryCloseStatus) then
    @oWinHttpWebSocketQueryCloseStatus := GetProcAddress(vModule, 'WinHttpWebSocketQueryCloseStatus');

  Result := oWinHttpWebSocketQueryCloseStatus(hRequest, pusStatus, pvReason, dwReasonLength, pdwReasonLengthConsumed);
end;


function WinHttpWebSocketReceive(hWebSocket: HINTERNET; pvBuffer: PVOID; dwBufferLength: DWORD; pdwBytesRead: Pointer; peBufferType: Pointer): DWORD; stdcall;
begin
  DoInitialize();
  if not Assigned(oWinHttpWebSocketReceive) then
    @oWinHttpWebSocketReceive := GetProcAddress(vModule, 'WinHttpWebSocketReceive');

  Result := oWinHttpWebSocketReceive(hWebSocket, pvBuffer, dwBufferLength, pdwBytesRead, peBufferType);
end;


function WinHttpWebSocketSend(hWebSocket: HINTERNET; eBufferType: WINHTTP_WEB_SOCKET_BUFFER_TYPE; pvBuffer: PVOID; dwBufferLength: DWORD): DWORD; stdcall;
begin
  DoInitialize();
  if not Assigned(oWinHttpWebSocketSend) then
    @oWinHttpWebSocketSend := GetProcAddress(vModule, 'WinHttpWebSocketSend');

  Result := oWinHttpWebSocketSend(hWebSocket, Ord(eBufferType), pvBuffer, dwBufferLength);
end;


function WinHttpWebSocketShutdown(hWebSocket: HINTERNET; usStatus: USHORT; pvReason: PVOID; dwReasonLength: DWORD): DWORD; stdcall;
begin
  DoInitialize();
  if not Assigned(oWinHttpWebSocketShutdown) then
    @oWinHttpWebSocketShutdown := GetProcAddress(vModule, 'WinHttpWebSocketShutdown');

  Result := oWinHttpWebSocketShutdown(hWebSocket, usStatus, pvReason, dwReasonLength);
end;


{$ENDIF}




{$IFDEF SGC_WINHTTP_STATIC}
function WinHttpCheckPlatform; external Winhttpapi name 'WinHttpCheckPlatform';
function WinHttpCloseHandle; external Winhttpapi name 'WinHttpCloseHandle';
function WinHttpOpen; external Winhttpapi name 'WinHttpOpen';
function WinHttpConnect; external Winhttpapi name 'WinHttpConnect';
function WinHttpOpenRequest; external Winhttpapi name 'WinHttpOpenRequest';
function WinHttpSetTimeouts; external Winhttpapi name 'WinHttpSetTimeouts';
function WinHttpSetOption; external Winhttpapi name 'WinHttpSetOption';
function WinHttpSetCredentials; external Winhttpapi name 'WinHttpSetCredentials';
function WinHttpAddRequestHeaders; external Winhttpapi name 'WinHttpAddRequestHeaders';
function WinHttpSendRequest; external Winhttpapi name 'WinHttpSendRequest';
function WinHttpReceiveResponse; external Winhttpapi name 'WinHttpReceiveResponse';
function WinHttpQueryHeaders; external Winhttpapi name 'WinHttpQueryHeaders';
function WinHttpSetStatusCallback; external Winhttpapi name 'WinHttpSetStatusCallback';

{$WARN SYMBOL_PLATFORM OFF}
function WinHttpWebSocketClose; external Winhttpapi name 'WinHttpWebSocketClose' {$IFDEF D2010}delayed{$ENDIF};
function WinHttpWebSocketCompleteUpgrade; external Winhttpapi name 'WinHttpWebSocketCompleteUpgrade' {$IFDEF D2010}delayed{$ENDIF};
function WinHttpWebSocketQueryCloseStatus; external Winhttpapi name 'WinHttpWebSocketQueryCloseStatus' {$IFDEF D2010}delayed{$ENDIF};
function WinHttpWebSocketReceive; external Winhttpapi name 'WinHttpWebSocketReceive' {$IFDEF D2010}delayed{$ENDIF};
function WinHttpWebSocketSend; external Winhttpapi name 'WinHttpWebSocketSend' {$IFDEF D2010}delayed{$ENDIF};
function WinHttpWebSocketShutdown; external Winhttpapi name 'WinHttpWebSocketShutdown' {$IFDEF D2010}delayed{$ENDIF};
{$WARN SYMBOL_PLATFORM ON}
{$ENDIF}

{$ENDIF}


end.

